# movie-app

./: .gitignore  APP_STYLE_GUIDE.md  PORTING_GUIDE.md  README.en.md  README.md  package.json  pnpm-lock.yaml  start-app.command  start-dev.command  test-collect-db.js  test-collect-direct.js  test-collect-full.js  test-collect-shell.sh  test-collect-to-db.js  test-collect.js  test-collector.js  test-full-collect.js  tsconfig.base.json  视频源管理按钮修复方案.md
.github/workflows/: build.yml
.husky/: pre-commit
.opencode/plans/: batch-reprobe-task.md
.trae/documents/: ad-monetization-plan.md  collect_exception_code_review_plan.md  collect_exception_handling_complete_plan.md  collect_exception_handling_spec.md  delete_media_without_play_source_review.md  desktop-completion-plan.md  fix_duplicate_play_source_plan.md  fix_play_source_display_plan.md  fix_play_source_name_plan.md  monorepo-tauri-refactor.md  movie_episode_display_fix_plan.md  page_level_failure_handling_plan.md  player-fullscreen-fix-plan.md  player-fullscreen-plan.md  vidstack-player-migration.md  原网站与APP功能一比一比对计划.md
.trae/temp/: fetch_media_detail.js  fix_movie_quality.js
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: App.tsx  app.json  metro.config.js  package.json
scripts/: bump-version.mjs  fill-remarks.js  fix-variety-remarks-from-episodes.js  fix-variety-remarks.js  launch-app.sh
(+93 files in other folders)
