[package]
name = "movie-app-desktop"
version = "1.0.0"
description = "Movie App Desktop (Tauri)"
authors = ["movie-app"]
edition = "2021"

[lib]
name = "movie_app_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
