[package]
name = "movie-app-desktop"
version = "1.0.10"
description = "Movie App Desktop (Tauri)"
authors = ["movie-app"]
edition = "2021"

[lib]
name = "movie_app_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2.5.9", features = ["unsafe-headers"] }
